# Juice-Shop

./: .gitignore  LICENSE  README.md  clear_old_waste_data.py  hide_workspaces.py  pyproject.toml  requirements.txt
juice_shop/: hooks.py  modules.txt  patches.txt
juice_shop/config/: desktop.py
juice_shop/juice_shop/: sales_invoice_hooks.py
juice_shop/juice_shop/doctype/juice_item/: juice_item.json  juice_item.py
juice_shop/juice_shop/doctype/juice_order/: juice_order.js  juice_order.json  juice_order.py
juice_shop/juice_shop/doctype/juice_order_item/: juice_order_item.json  juice_order_item.py
juice_shop/juice_shop/doctype/juice_recipe/: __init__.py  juice_recipe.json  juice_recipe.py
juice_shop/juice_shop/doctype/juice_recipe_item/: juice_recipe_item.json  juice_recipe_item.py
juice_shop/juice_shop/doctype/raw_material/: raw_material.json  raw_material.py
juice_shop/juice_shop/doctype/stock_adjustment/: stock_adjustment.json  stock_adjustment.py
juice_shop/juice_shop/doctype/stock_adjustment_item/: stock_adjustment_item.json  stock_adjustment_item.py
juice_shop/juice_shop/doctype/stock_ledger_entry/: stock_ledger_entry.json  stock_ledger_entry.py
juice_shop/juice_shop/doctype/waste_entry/: waste_entry.json  waste_entry.py
juice_shop/juice_shop/doctype/waste_entry_item/: waste_entry_item.json  waste_entry_item.py
juice_shop/juice_shop/doctype/waste_reason/: waste_reason.json  waste_reason.py
juice_shop/juice_shop/report/daily_juice_sales/: daily_juice_sales.json  daily_juice_sales.py
(+4 files in other folders)
