[project]
name = "juice_shop"
authors = [
    { name = "Your Company", email = "you@example.com" }
]
description = "Simple juice shop sales & order tracking for Frappe/ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
